[gd_scene load_steps=4 format=3 uid="uid://cm0u0qw5clpvk"]

[ext_resource type="Script" path="res://UI.gd" id="1_0ydio"]
[ext_resource type="FontFile" uid="uid://bb57ggvwo4ffg" path="res://Fonts/berlin_sans_fb.TTF" id="2_8w22d"]
[ext_resource type="Texture2D" uid="uid://dml5roe3130vu" path="res://Sprites/money_box.png" id="3_6mjpd"]

[node name="UI" type="ParallaxBackground"]
layer = 80
script = ExtResource("1_0ydio")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TasksCompleted" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 50
text = "Tasks completed: 0"

[node name="TasksFailed" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_top = 62.0
offset_right = 397.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 50
text = "Tasks failed: 0/5"

[node name="Tool" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_top = 130.0
offset_right = 131.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 50
text = "Tool: -"

[node name="Test" type="Label" parent="Control"]
layout_mode = 0
offset_left = 555.0
offset_top = 19.0
offset_right = 595.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 30

[node name="MoneyBox" type="Sprite2D" parent="Control"]
texture = ExtResource("3_6mjpd")
centered = false

[node name="MoneyText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 337.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 50
text = "0â‚¬"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesBox" type="Sprite2D" parent="Control"]
position = Vector2(1580, 0)
texture = ExtResource("3_6mjpd")
centered = false

[node name="CurrentTasks" type="Control" parent="Control"]
anchors_preset = 0
offset_top = 225.0
offset_right = 40.0
offset_bottom = 265.0

[node name="FPS" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 1737.0
offset_top = 12.0
offset_right = 1793.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("2_8w22d")
theme_override_font_sizes/font_size = 50
text = "60"
horizontal_alignment = 1
vertical_alignment = 1
